clmpkg/objects/Docusign_Agreement_Status__c.object
<CustomObject>
    <description>Custom object connected to Docusign Connect for the CLM Apttus envelope status updates.</description>
    <fields>
        <fullName>Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Docusign Agreement Status</relationshipLabel>
        <relationshipName>Docusign_Agreement_Status</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <label>Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Date__c</fullName>
        <label>Declined Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_Reason__c</fullName>
        <label>Declined Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Envelope_ID__c</fullName>
        <label>Envelope ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sender__c</fullName>
        <label>Sender</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent__c</fullName>
        <label>Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Voided_Date__c</fullName>
        <label>Voided Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Voided_Reason__c</fullName>
        <label>Voided Reason</label>
        <type>TextArea</type>
    </fields>
    <label>Docusign Agreement Status</label>
    <nameField>
        <label>Docusign Agreement Status Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docusign Agreement Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>